# mevlog-backend

./: .gitignore  Cargo.toml  README.md  chain-output.json  deploy.sh  justfile  output.json  warmup.sh
.sqlx/: query-5e788e1eccccc8cb0d12247d1542b1412e7a453404ccbf91f8f2eeb7ea3ac102.json  query-9737f645e7a99c6d939cacd0d6a1a3f699a2e1a4a1b250c812d3f75e60c473e9.json  query-cbacfa87e80e613d030ad5932ffa75bee03b6b1f075a7c251f0001765e2aff20.json  query-cffd821476de7bf1b7b4ca4fdd3355c6bf0034414dde69dc5598870472f09285.json
javascripts/: scripts.js
javascripts/react/: ChainSelector.jsx  CommandBuilder.jsx  ExploreViewer.jsx  LoginPopup.jsx  MevlogViewer.jsx  SearchForm.jsx  Transaction.jsx  index.js
migrations/: 20250908000001_create_users_table.sql
playbooks/roles/nginx/files/: mevlog.rs.conf
remote/: clear_logs.sh  dbg.sh  kill_server.sh  logs.sh  restart.sh
src/: auth.rs  cookie_crypto.rs  database.rs  lib.rs  misc.rs  slack.rs
src/config/: middleware.rs  routes.rs  schedule.rs
src/controllers/: base_controller.rs  html.rs
src/controllers/html/: explore_controller.rs  home_controller.rs  login_controller.rs  not_found_controller.rs  search_controller.rs  terms_controller.rs  tui_controller.rs
src/controllers/json/: base_controller.rs  chain_info_controller.rs  chains_controller.rs  explore_controller.rs
src/controllers/websocket/: base_controller.rs  search_controller.rs
src/misc/: mod.rs  prices.rs  rpc_utils.rs  utils.rs
styles/: styles.css
templates/: explore.html  home.html  inspect.html  layout.html  login.html  search.html  terms.html  trace.html  tui.html
