[package]
name = "mevlog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.0"
alloy = { version = "1.0", features = ["full", "node-bindings"] }
revm = { version = "27.0.2", features = ["std", "alloydb"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }
eyre = "0.6.12"
serde_json = "1.0.138"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["time"] }
tracing = "0.1.41"
tracing-futures = "0.2"
tower-http = { version = "0.6.2", features = [
  "cors",
  "fs",
  "trace",
  "timeout",
  "compression-gzip",
  "compression-br",
  "compression-deflate",
  "catch-panic",
  "set-header",
] }
tower = "0.5.2"
futures = "0.3.31"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal", "english"] }
tracing-appender = "0.2.3"
time = "0.3.37"
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3.31"
unicode-normalization = "0.1.24"
ansi-to-html = "0.2.2"
askama = "0.12.1"
regex = "1.11.1"
tokio-stream = "0.1.17"
# mevlog = "0.6.0"
mevlog = { path = "../mevlog-rs" }
rand = "0.9.2"
oauth2 = "4.4"
cookie = "0.17"
base64 = "0.22.0"
urlencoding = "2.1"
aes-gcm = "0.10"
hex = "0.4"
lazy_static = "1.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

[dev-dependencies]
glob = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
mockito = "1.5.0"
http-body-util = "0.1.2"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "scheduler"
path = "bin/scheduler.rs"

[package.metadata.askama]
template-dir = "views"
